# painting

./: Cargo.toml
examples/: local_vulkan.rs
src/: camera.rs  lib.rs  line.rs  point.rs  shader.wgsl  tools.rs
src/canvas/: camera.rs  mod.rs  shader.wgsl  structs.rs
src/line/: structs.rs
