[package]
name = "painting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

winit = "0.28.3"
wgpu = { version = "0.15.1", option = true }
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18.0"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"

[features]
webgl = ["wgpu/webgl"]
